--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
 
     <div>
-      <a href="#">API reservations</a>
+      <a href="/api/reservations">API reservations</a>
       <a>|</a>
-      <a href="#">API waitlist</a>
+      <a href="/api/waitlist">API waitlist</a>
     </div>
 
 
